# neuralert_firmware

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
apps/neuralert/include/: W25QXXoldxxx.h  config_generic_sdk.h  system_start.h
apps/neuralert/src/: Mc363x.c  globals.c  sample_apps.c  system_start.c  tcp_client_sleep2_sample.c
core/bsp/ldscripts/: mem.ld.2MB  mem.ld.4MB  sections_boot.ld
core/bsp/startup/: _exit.c  _startup.c  startup_ARMCM4.S
core/config/: FreeRTOSConfig.h
core/freertos/: tasks.c
core/freertos/include/: FreeRTOS.h
core/main/config/: custom_config.h
core/main/include/: project_config.h
core/main/src/: main.oldc
core/segger_tools/Config/: Global.h  SEGGER_RTT_Conf.h
core/segger_tools/SEGGER/: SEGGER_RTT.c  SEGGER_RTT_printf.c  SEGGER_SYSVIEW.c  SEGGER_SYSVIEW.h
core/wifistack/wpa_cli/: wpa_ctrl.h
docs/doxygen/: DoxygenLayout.xml  dialog_license.txt  doxygen_tree.h  licensing.txt
docs/doxygen/html/: _crypto_2_crypto___a_e_s_2include_2config__generic__sdk_8h_source.html  _crypto_2_crypto___a_e_s_2include_2sample__defs_8h.html  _crypto_2_crypto___a_e_s_2include_2sample__defs_8h_source.html  _crypto_2_crypto___a_e_s_2include_2sys__common__features_8h.js  _crypto_2_crypto___a_e_s_2include_2system__start_8h_source.html  _crypto_2_crypto___a_e_s_2include_2user__main_8h.html  _crypto_2_crypto___cipher_2include_2config__generic__sdk_8h_source.html  _crypto_2_crypto___cipher_2include_2sample__defs_8h.html  _crypto_2_crypto___cipher_2include_2sys__common__features_8h.html  _crypto_2_crypto___cipher_2include_2sys__common__features_8h.js  _crypto_2_crypto___cipher_2include_2system__start_8h.html  (+1543 more)
docs/license/: license.txt
neuralert/: CMakeLists.txt
neuralert/include/apps/: app_errno.h  application.h  placebo.h  user_command.h  user_http_client.h  user_nvram_cmd_table.h  user_retmem.h
neuralert/include/config/: config_generic_sdk.h  sys_common_features.h  user_def.h
neuralert/include/drivers/: Mc363x.h  W25QXX.h
neuralert/include/sdk_overrides/: README.md  mqtt_client.h
neuralert/include/sdk_support/: README.md  customer_dpm_features.h  user_dpm.h  user_dpm_api.h
neuralert/include/user_main/: common.h  config_generic_sdk.h  system_start.h  user_main.h  user_version.h
neuralert/src/apps/: neuralert.c  placebo.c  user_apps.c  user_command.c  user_gpio_handle.c  user_host_interface.c  user_http_server.c  user_nvram_cmd_table.c
neuralert/src/drivers/: Mc363x.c  W25QXX.c
neuralert/src/user_main/: globals.c  system_start.c  user_main.c  user_retmem.c
notify_user_LED/: README.md  after_fix.ll  before_fix.ll  main.c
old/core/freertos/: timers.c
tools/SBOOT/: CM.2.secudebug.sh  CM.3.secuboot.bat  CM.3.secuboot.sh  CM.3.secuboot_py.bat  CM.3.secuboot_py.sh  CM.4.secuasset.sh  DM.1.secuman.bat  DM.2.secudebug.bat  build_sbtool.sh
tools/j-link_cfg/: DA16200_Main_Debug(attach).launch  DA16200_Main_Debug(attach_with_rtos_info).launch  DA16200_Main_Debug(reboot).launch  DA16600_Main_Debug(attach).launch  DA16600_Main_Debug(attach_with_rtos_info).launch  DA16600_Main_Debug(reboot).launch  Linux_DA16200_Main_Debug(attach).launch  Linux_DA16200_Main_Debug(attach_with_rtos_info).launch  Linux_DA16200_Main_Debug(reboot).launch  Linux_DA16600_Main_Debug(attach).launch  Linux_DA16600_Main_Debug(attach_with_rtos_info).launch  Linux_DA16600_Main_Debug(reboot).launch  config_v2.0.xml
tools/util/: __temp_img_path.txt  add_version.bat  mk_boot_loader_image_start.sh  mk_sboot_image.sh  mk_sboot_image_clean.bat  mk_sboot_image_clean.sh  mk_version.bat  mk_version.sh  postbuild_start.sh  prebuild.bat  prebuild.sh  prebuild_start.sh.py  setup_secutool_py.bat
tools/version/: 3rd_customer_build_num.h
utility/cfg_generator/: Generate Configuration For Linux.launch  Generate Configuration For Windows.launch  ReadMe.txt
utility/programming-scripts/: ReadMe.txt  programmer.py
(+3943 files in other folders)
