set(NEURALERT_TARGET_NAME neuralert)
set(NEURALERT_TARGET ${NEURALERT_TARGET_NAME}.elf)

set(NEURALERT_TARGET_INCLUDE
    ${CMAKE_CURRENT_SOURCE_DIR}/include/apps
    ${CMAKE_CURRENT_SOURCE_DIR}/include/user_main
)

file(GLOB NEURALERT_TARGET_SOURCE LIST_DIRECTORIES false
    src/apps/*.c
    src/user_main/*.c
)

add_executable(${NEURALERT_TARGET} ${NEURALERT_TARGET_SOURCE})
target_include_directories(${NEURALERT_TARGET} PRIVATE ${NEURALERT_TARGET_INCLUDE})


set(NEURALERT_TARGET ${NEURALERT_TARGET} PARENT_SCOPE)
set(NEURALERT_TARGET_NAME ${NEURALERT_TARGET_NAME} PARENT_SCOPE)
set(NEURALERT_TARGET_INCLUDE ${NEURALERT_TARGET_INCLUDE} PARENT_SCOPE)
add_custom_command(TARGET ${NEURALERT_TARGET} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy
    $<TARGET_FILE:${NEURALERT_TARGET}> ${CMAKE_CURRENT_BINARY_DIR}/..
)